# docs/swagger.json
@@ -9,6 +9,23 @@
     "host": "localhost:8001",
     "basePath": "/",
     "paths": {
+        "/v1/health": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get health",
+                "operationId": "get-health",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Health"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/note": {
             "post": {
                 "produces": [
@@ -141,6 +158,14 @@
         }
     },
     "definitions": {
+        "models.Health": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.MultiID": {
             "type": "object",
             "properties": {
