# routes/notes.go
@@ -11,6 +11,7 @@ import (
 func SetupRouter() *gin.Engine {
 	router := gin.Default()
 	v1 := router.Group("/v1") // v1 version api routes
+	v1.GET("/health", controllers.GetHealth)
 
 	v1.GET("/notes", controllers.GetNotes)
 	v1.POST("/note", controllers.AddNote)
